[package]
name = "parallel-programming-midterm-report-1091"
version = "0.1.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
num_cpus = "1.13.0"